--- a/src/css/main.css
+++ b/src/css/main.css
@@ -121,6 +121,7 @@
 	top: 50%;
 	transform: translateY(-50%);
 	pointer-events: none;
+	margin-top: -10px;
 }
 
 	.page-home-gallery .owl-buttons div{
@@ -141,3 +142,12 @@
 			float: right;
 			margin-right: -80px !important; /* !important para sobrescrever o estilo do plugin */
 		}
+
+.page-home-gallery .gallery-item{
+	padding: 0 5px;
+}
+
+	.page-home-gallery .gallery-item img{
+		max-width: 100%;
+		height: auto;
+	}
